# materialXToArnold

./: CMakeLists.txt  README.md
cmake/Modules/: DebugPrintEnvVars.cmake  FindArnold.cmake  FindGMock.cmake  FindMaterialX.cmake  ForceSetCacheVariableWhenNotOnCommandLine.cmake
src/: CMakeLists.txt  procedural.cpp
src/debug/: arnold_debug.cpp  arnold_debug.h
src/integration_tests/: CMakeLists.txt  README  main.cpp  simple_surface_test.cpp  simple_surface_test.h
src/materialx_to_arnold/: CMakeLists.txt  README  configuration.h  constants.h  dispatch.cpp  dispatch.h  exceptions.cpp  exceptions.h  implementation.cpp  implementation.h  interface.cpp  interface.h  macros.h  materialx_translation.h
src/materialx_to_arnold/arnold/: facade.cpp  facade.h  procedural.h  utility.cpp  utility.h  utility.inc
src/materialx_to_arnold/arnold/constants/: interface.h  procedural.h
src/materialx_to_arnold/materialx/: facade.cpp  facade.h
src/materialx_to_arnold/operating_system/: constants.h  facade.cpp  facade.h
src/materialx_to_arnold/translation/: demangle.cpp  demangle.h  dispatcher.h  interface.h  translator.h
src/materialx_to_arnold/translation/document/: color_management_system.h  translator.h
src/materialx_to_arnold/unit_tests/: CMakeLists.txt  README
src/materialx_to_arnold/unit_tests/arnold/: CMakeLists.txt  mock_arnold_facade.h  procedural_test.cpp  translator_test.cpp  utility_test.cpp
src/materialx_to_arnold/unit_tests/materialx_document_translation_test/: CMakeLists.txt  main.cpp  materialx_document_translation_test.cpp  mock_arnold_facade.h  mock_materialx_facade.h
